Bug 1158901 - Make off-screen job details discoverable with a tab

--- a/ui/css/treeherder.css
+++ b/ui/css/treeherder.css
@@ -734,8 +734,6 @@ div#bottom-panel .navbar.navbar-dark .navbar-nav > li.active a:focus {
 
 #bottom-left-panel em.testfail{ color:red;}
 
-#bottom-left-panel .printlines{padding-bottom: 5px;}
-
 #bottom-left-bottom {
     overflow: auto;
 }
@@ -757,6 +755,7 @@ div#bottom-panel .navbar.navbar-dark .navbar-nav > li.active a:focus {
     flex: 1;
     display: -webkit-flex;
     display: flex;
+    overflow: auto;
 }
 
 #bottom-center-bottom > * {
@@ -781,7 +780,6 @@ div#bottom-panel .navbar.navbar-dark .navbar-nav > li.active a:focus {
 }
 
 #bottom-center-panel ul.failure-summary-list{
-    overflow: auto;
     width: 100%;
     margin-bottom: 0;
 }
@@ -800,8 +798,12 @@ ul.failure-summary-list li .btn-xs {
     background: #ffffff;
 }
 
-.failure-summary-line {
+.job-tabs-content {
     padding: 2px 4px 0px;
+}
+
+.job-tabs-divider {
+    border-left: 1px solid lightgrey;
 }
 
 .failure-summary-bugs {
